# aileron

./: Cargo.toml  README.md  flake.nix
.github/workflows/: crate.yml
avrogant/: Cargo.toml  lib.rs
avrogant/src/: lib.rs
avrogant/tests/: macro.rs  person.avsc  test.rs
avrogant_macro/: Cargo.toml
avrogant_macro/src/: lib.rs
build_test/: Cargo.toml  build.rs
build_test/src/: main.rs
src/: lib.rs
tests/: test.rs
