[package]
name = "avrogant_macro"
description = "A proc macro for converting Avro schemas into Rust types"
authors = ["Lucas Andreussi <lucasandreussi@gmail.com>"]
license = "MIT"
version = "0.1.2"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
rsgen-avro.workspace = true
syn = "2.0.111"
