[package]
name = "build_test"
description = "Just a dummy program to test build script invocation"
authors = ["Lucas Andreussi <lucasandreussi@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
avrogant.workspace = true

[dependencies]
serde = {workspace = true, features = ["derive"]}
